[gd_scene load_steps=33 format=3 uid="uid://b5t7f8r1backb"]

[ext_resource type="Script" uid="uid://ut8x63m5jxrn" path="res://src/players/model.gd" id="1_8ddow"]
[ext_resource type="PackedScene" uid="uid://8nff25n1w7mq" path="res://assets/models/player/test_04.glb" id="2_1e60p"]

[sub_resource type="BoxShape3D" id="50"]
size = Vector3(1.14, 2.037, 0.656)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w5rup"]
animation = &"g_active-idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j06ue"]
animation = &"g_active_idle-to-forehand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6rst8"]
animation = &"g_crossover_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lj1u1"]
animation = &"g_forehand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k6wyo"]
animation = &"g_forehand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b8xf6"]
animation = &"g_run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_os7wk"]
animation = &"g_sproing_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7lfwa"]
animation = &"g_active_idle-to-forehand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_thbb2"]
animation = &"g_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8sm40"]
animation = &"g_run_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dbqhb"]
animation = &"g_run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t4p63"]
animation = &"g_run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yvebi"]
animation = &"g_idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mttge"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8sm40")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_dbqhb")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_t4p63")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_yvebi")
blend_point_3/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1e60p"]
animation = &"g_backhand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bnshe"]
animation = &"g_serve"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1xcp4"]
animation = &"g_forehand"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_6rst8"]
input_0/name = "forehand"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "backhand"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "serve"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_k6wyo"]
graph_offset = Vector2(-212.875, 6.85002)
nodes/Animation/node = SubResource("AnimationNodeAnimation_1xcp4")
nodes/Animation/position = Vector2(140, 20)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_1e60p")
"nodes/Animation 2/position" = Vector2(80, 180)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_bnshe")
"nodes/Animation 3/position" = Vector2(120, 380)
nodes/Transition/node = SubResource("AnimationNodeTransition_6rst8")
nodes/Transition/position = Vector2(360, 80)
nodes/output/position = Vector2(580, 100)
node_connections = [&"Transition", 0, &"Animation", &"Transition", 1, &"Animation 2", &"Transition", 2, &"Animation 3", &"output", 0, &"Transition"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7lfwa"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j06ue"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b8xf6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1cwho"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8rtii"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eopp8"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ogsvg"]
xfade_time = 0.2
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w5rup"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1thep"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dxleo"]
states/g_active-idle/node = SubResource("AnimationNodeAnimation_w5rup")
states/g_active-idle/position = Vector2(265, 208)
states/g_active_idle-to-forehand/node = SubResource("AnimationNodeAnimation_j06ue")
states/g_active_idle-to-forehand/position = Vector2(-70, 236)
states/g_crossover_right/node = SubResource("AnimationNodeAnimation_6rst8")
states/g_crossover_right/position = Vector2(200, 390)
states/g_forehand/node = SubResource("AnimationNodeAnimation_k6wyo")
states/g_forehand/position = Vector2(514, 268)
"states/g_forehand 2/node" = SubResource("AnimationNodeAnimation_lj1u1")
"states/g_forehand 2/position" = Vector2(-7, 341)
states/g_run_right/node = SubResource("AnimationNodeAnimation_b8xf6")
states/g_run_right/position = Vector2(477, 359)
states/g_sproing_right/node = SubResource("AnimationNodeAnimation_os7wk")
states/g_sproing_right/position = Vector2(18, 157)
states/g_to-forehand/node = SubResource("AnimationNodeAnimation_7lfwa")
states/g_to-forehand/position = Vector2(376, 193)
states/idle/node = SubResource("AnimationNodeAnimation_thbb2")
states/idle/position = Vector2(158, 227)
states/move/node = SubResource("AnimationNodeBlendSpace2D_mttge")
states/move/position = Vector2(400, 109)
states/stroke/node = SubResource("AnimationNodeBlendTree_k6wyo")
states/stroke/position = Vector2(567, 111)
transitions = ["move", "stroke", SubResource("AnimationNodeStateMachineTransition_7lfwa"), "stroke", "move", SubResource("AnimationNodeStateMachineTransition_j06ue"), "g_to-forehand", "g_forehand", SubResource("AnimationNodeStateMachineTransition_b8xf6"), "Start", "move", SubResource("AnimationNodeStateMachineTransition_1cwho"), "g_sproing_right", "g_active_idle-to-forehand", SubResource("AnimationNodeStateMachineTransition_8rtii"), "g_active_idle-to-forehand", "g_forehand 2", SubResource("AnimationNodeStateMachineTransition_eopp8"), "g_crossover_right", "g_run_right", SubResource("AnimationNodeStateMachineTransition_ogsvg"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_w5rup"), "Start", "g_active-idle", SubResource("AnimationNodeStateMachineTransition_1thep")]
graph_offset = Vector2(-126, 16)

[node name="Model" type="Node3D"]
script = ExtResource("1_8ddow")

[node name="h" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="test_04" parent="h" instance=ExtResource("2_1e60p")]

[node name="Skeleton3D" parent="h/test_04/game-rig" index="0"]
bones/0/position = Vector3(0, 0.945494, 0.0117561)
bones/0/rotation = Quaternion(-0.0991104, 0, 0, 0.995076)
bones/1/rotation = Quaternion(0.167482, 0, 0, 0.985875)
bones/2/position = Vector3(0, 0.0722904, 3.60575e-08)
bones/2/rotation = Quaternion(-0.137911, 0, 0, 0.990445)
bones/3/position = Vector3(0, 0.0660209, 3.81907e-08)
bones/3/rotation = Quaternion(-0.00365924, 0, 0, 0.999993)
bones/4/position = Vector3(0, 0.154897, -4.06927e-08)
bones/4/rotation = Quaternion(0.198044, 0, 0, 0.980193)
bones/5/position = Vector3(0, 0.240083, 6.98419e-08)
bones/5/rotation = Quaternion(0.0229319, 0, 0, 0.999737)
bones/6/rotation = Quaternion(-0.151217, 0, 0, 0.988501)
bones/9/rotation = Quaternion(0.931971, -0.0623164, 0.248928, -0.256088)
bones/14/rotation = Quaternion(0.931971, 0.0623164, -0.248928, -0.256088)
bones/17/rotation = Quaternion(-0.86495, 4.26405e-09, 3.92236e-08, 0.501857)
bones/18/position = Vector3(1.37372e-14, 0.00996181, 8.5608e-08)
bones/18/rotation = Quaternion(-0.119691, 3.1558e-08, 3.80455e-09, 0.992811)
bones/19/position = Vector3(0.0163968, -0.00752359, 0.11466)
bones/19/rotation = Quaternion(-0.236028, 0.62895, 0.71011, 0.210849)
bones/20/position = Vector3(-0.0163968, -0.00752359, 0.11466)
bones/20/rotation = Quaternion(0.236028, 0.62895, 0.71011, -0.210849)
bones/21/position = Vector3(0, -0.02443, 0.110742)
bones/22/rotation = Quaternion(0.0482493, 0.678689, 0.731447, -0.0451492)
bones/24/rotation = Quaternion(-0.0244435, 0.607186, -0.522652, 0.597965)
bones/25/rotation = Quaternion(0.229137, 0.016186, 0.236833, 0.944005)
bones/26/rotation = Quaternion(0.300171, 0.00224732, -0.0163608, 0.953742)
bones/27/rotation = Quaternion(0.157976, -0.0125538, 0.154355, 0.975223)
bones/28/rotation = Quaternion(0.516203, -0.517634, 0.128175, 0.670195)
bones/29/rotation = Quaternion(0.157626, 0.00834236, 0.125471, 0.97946)
bones/30/rotation = Quaternion(0.27587, 0.0139218, 0.171662, 0.945639)
bones/31/rotation = Quaternion(0.312317, 0.00392896, 0.125246, 0.941677)
bones/35/rotation = Quaternion(-0.0244435, -0.607186, 0.522652, 0.597965)
bones/36/rotation = Quaternion(0.229137, -0.016186, -0.236833, 0.944005)
bones/37/rotation = Quaternion(0.300171, -0.0022473, 0.0163609, 0.953742)
bones/38/rotation = Quaternion(0.157976, 0.0125537, -0.154355, 0.975223)
bones/39/rotation = Quaternion(0.516203, 0.517634, -0.128175, 0.670195)
bones/40/rotation = Quaternion(0.157626, -0.00834248, -0.125471, 0.97946)
bones/41/rotation = Quaternion(0.27587, -0.0139216, -0.171662, 0.945639)
bones/42/rotation = Quaternion(0.312317, -0.00392894, -0.125246, 0.941677)
bones/45/position = Vector3(0, 0.0879051, -0.0279832)
bones/49/rotation = Quaternion(-0.78609, 2.61199e-14, 2.05382e-14, 0.618112)
bones/50/position = Vector3(4.23516e-21, 0.0180319, -1.75822e-07)
bones/50/rotation = Quaternion(-0.325181, 2.28492e-15, 6.64486e-15, 0.945652)
bones/52/rotation = Quaternion(-0.163466, 0.93749, 0.303504, -0.0477075)
bones/54/rotation = Quaternion(0.684876, -0.0939814, -0.249508, 0.678128)
bones/57/rotation = Quaternion(0.684876, 0.0939814, 0.249508, 0.678128)
bones/58/position = Vector3(-3.86349e-08, -0.0286635, 0.118898)
bones/58/rotation = Quaternion(-0.596341, -0.400049, -0.463528, 0.519114)
bones/59/position = Vector3(-6.19966e-08, 0.0131357, 7.77576e-08)
bones/59/rotation = Quaternion(-0.114116, -0.0550915, 0.207426, 0.970009)
bones/60/position = Vector3(3.86349e-08, -0.0286635, 0.118898)
bones/60/rotation = Quaternion(-0.596341, 0.400049, 0.463528, 0.519114)
bones/61/position = Vector3(1.25082e-08, 0.0131358, 4.80257e-08)
bones/61/rotation = Quaternion(-0.114116, 0.0550915, -0.207426, 0.970009)
bones/62/position = Vector3(8.59452e-09, -0.0379785, 0.118064)
bones/62/rotation = Quaternion(-0.566769, -0.417665, -0.413506, 0.577358)
bones/63/rotation = Quaternion(0.0250831, 0.00550765, 0.138876, 0.989977)
bones/64/position = Vector3(-8.59452e-09, -0.0379785, 0.118064)
bones/64/rotation = Quaternion(-0.566769, 0.417665, 0.413506, 0.577358)
bones/65/rotation = Quaternion(0.0250831, -0.00550765, -0.138876, 0.989977)
bones/66/rotation = Quaternion(-0.172049, 0.791424, 0.524873, 0.261831)
bones/67/rotation = Quaternion(0.00870812, -0.0389789, -0.0890473, 0.995226)
bones/68/rotation = Quaternion(-0.179551, -0.0526494, -0.218929, 0.957632)
bones/69/rotation = Quaternion(-0.250333, 0.0465416, -0.2193, 0.941846)
bones/70/rotation = Quaternion(0.712732, -0.051836, -0.696173, 0.0683269)
bones/71/position = Vector3(-5.15911e-08, 0.0195702, 2.32399e-09)
bones/71/rotation = Quaternion(-0.0584434, -0.0607394, -0.0814582, 0.993106)
bones/72/rotation = Quaternion(0.172049, 0.791424, 0.524873, -0.261831)
bones/73/rotation = Quaternion(0.00870811, 0.0389789, 0.0890473, 0.995226)
bones/74/rotation = Quaternion(-0.179551, 0.0526494, 0.218929, 0.957632)
bones/75/rotation = Quaternion(-0.250333, -0.0465416, 0.2193, 0.941846)
bones/76/rotation = Quaternion(0.712732, 0.051836, 0.696173, 0.0683268)
bones/76/scale = Vector3(1.00001, 1, 1.00001)
bones/77/position = Vector3(3.23363e-08, 0.0195699, 5.54122e-09)
bones/77/rotation = Quaternion(-0.0584434, 0.0607394, 0.0814582, 0.993106)
bones/81/rotation = Quaternion(0.697489, -0.222988, -0.634, -0.248655)
bones/82/rotation = Quaternion(0.075185, 0.864997, 0.476578, -0.137845)
bones/83/rotation = Quaternion(0.196873, 0.758393, 0.560136, -0.26894)
bones/85/rotation = Quaternion(0.697489, 0.222988, 0.634, -0.248655)
bones/86/position = Vector3(0.0248724, -0.0367494, 0.105565)
bones/86/rotation = Quaternion(0.211863, 0.805386, -0.433437, 0.344383)
bones/87/position = Vector3(-1.37396e-08, 0.0389292, -1.01359e-07)
bones/87/rotation = Quaternion(-0.397767, -0.0499544, 0.0543533, 0.914512)
bones/88/position = Vector3(-0.0248724, -0.0367494, 0.105565)
bones/88/rotation = Quaternion(-0.211863, 0.805386, -0.433437, -0.344383)
bones/89/position = Vector3(-3.57798e-08, 0.0389289, 8.16762e-08)
bones/89/rotation = Quaternion(-0.397767, 0.0499544, -0.0543533, 0.914512)
bones/90/rotation = Quaternion(-0.352567, 0.314682, 0.871804, 0.128958)
bones/91/position = Vector3(-7.31121e-08, 0.0400507, -4.7092e-08)
bones/91/rotation = Quaternion(0.574808, 0.0442383, -0.173396, 0.798482)
bones/92/rotation = Quaternion(0.352567, 0.314682, 0.871803, -0.128958)
bones/93/position = Vector3(-5.92611e-08, 0.0400506, 1.31662e-07)
bones/93/rotation = Quaternion(0.574808, -0.0442383, 0.173396, 0.798482)
bones/94/rotation = Quaternion(0.744643, 0.133891, 0.653642, -0.0182425)
bones/95/rotation = Quaternion(0.846794, 0.13963, 0.510552, -0.0527228)
bones/97/rotation = Quaternion(0.744643, -0.133891, -0.653642, -0.0182425)
bones/98/rotation = Quaternion(0.846794, -0.139631, -0.510552, -0.0527228)
bones/102/position = Vector3(-1.92836e-16, -0.018746, 0.124694)
bones/102/rotation = Quaternion(0.99987, -2.50585e-14, 4.04112e-16, 0.0161222)
bones/103/rotation = Quaternion(-0.121295, -0.0974205, 0.987801, -0.00677664)
bones/105/position = Vector3(0.0247162, 0.167121, 0.0350156)
bones/105/rotation = Quaternion(0.609527, 0.508058, 0.466974, -0.390243)
bones/106/position = Vector3(-3.57317e-09, 0.177889, -2.51712e-07)
bones/106/rotation = Quaternion(-0.413512, -0.0298431, -0.178952, 0.892241)
bones/107/position = Vector3(5.58354e-09, 0.177889, 4.21165e-08)
bones/107/rotation = Quaternion(-0.1391, 0.474699, -0.567886, 0.657889)
bones/108/rotation = Quaternion(-9.94756e-08, 0.132416, 1.32898e-07, 0.991194)
bones/109/rotation = Quaternion(0.539232, 0.132416, 0.0142605, 0.83156)
bones/110/rotation = Quaternion(1.11043e-07, -0.355879, 2.22755e-07, 0.934532)
bones/111/rotation = Quaternion(0.0414125, -0.354967, -0.148006, 0.922159)
bones/113/position = Vector3(0.00331841, 0.0719536, 0.00334034)
bones/113/rotation = Quaternion(0.251783, 0.030465, 0.00613046, 0.967285)
bones/114/rotation = Quaternion(0.249743, 0.226624, -0.0679011, 0.938967)
bones/115/rotation = Quaternion(0.219627, 0.00768286, 0.00677099, 0.97553)
bones/116/rotation = Quaternion(0.250739, 0.597975, 0.597028, 0.472349)
bones/117/rotation = Quaternion(0.138548, -0.429112, -0.138447, 0.881759)
bones/120/position = Vector3(0.000206154, 0.0818464, 0.00246205)
bones/120/rotation = Quaternion(0.454971, -0.00428581, -0.116992, 0.882777)
bones/121/rotation = Quaternion(0.213691, 0.0932084, 0.0114328, 0.972377)
bones/122/rotation = Quaternion(0.218534, 0.0160367, -0.0165556, 0.975557)
bones/124/position = Vector3(-0.00175377, 0.0759021, -0.000211009)
bones/124/rotation = Quaternion(0.436588, -0.0112357, -0.139099, 0.888772)
bones/125/rotation = Quaternion(0.206714, 0.0803829, 0.0277685, 0.974698)
bones/126/rotation = Quaternion(0.22578, -0.0103113, -0.0302463, 0.973654)
bones/128/position = Vector3(-0.00397393, 0.0690545, -0.00504344)
bones/128/rotation = Quaternion(0.32331, 0.0398338, 0.00175508, 0.945453)
bones/129/rotation = Quaternion(0.229803, 0.0480768, 0.0205414, 0.971832)
bones/130/rotation = Quaternion(0.176993, -0.0312002, -0.00887036, 0.983678)
bones/131/position = Vector3(-0.0247162, 0.167121, 0.0350156)
bones/131/rotation = Quaternion(0.609527, -0.508058, -0.466974, -0.390243)
bones/132/position = Vector3(9.89777e-09, 0.17789, -2.43615e-07)
bones/132/rotation = Quaternion(-0.431657, -0.0106606, 0.10177, 0.896215)
bones/133/position = Vector3(1.60939e-08, 0.17789, 7.66082e-08)
bones/133/rotation = Quaternion(-0.280101, -0.534573, 0.479209, 0.637286)
bones/134/rotation = Quaternion(1.81826e-08, -0.237455, -6.33905e-08, 0.971399)
bones/135/rotation = Quaternion(0.591114, -0.237341, -0.0894118, 0.765675)
bones/136/rotation = Quaternion(1.08787e-08, 0.0937609, -2.49246e-08, 0.995595)
bones/137/rotation = Quaternion(-0.0389333, 0.0926972, -0.232048, 0.967494)
bones/139/position = Vector3(-0.00358427, 0.0738904, -0.00634562)
bones/139/rotation = Quaternion(0.553375, -0.0179991, -0.254585, 0.792868)
bones/140/rotation = Quaternion(0.230292, 0.22121, -0.0462574, 0.946516)
bones/141/rotation = Quaternion(0.195474, -0.00751371, -0.00695866, 0.980656)
bones/142/position = Vector3(-8.52334e-09, 2.47482e-07, -1.70967e-07)
bones/142/rotation = Quaternion(0.24361, -0.633622, -0.519348, 0.519091)
bones/143/rotation = Quaternion(0.249462, -0.0831425, 0.215058, 0.940535)
bones/144/rotation = Quaternion(0.374945, -0.0902972, 0.0270827, 0.922241)
bones/146/position = Vector3(-0.0521394, 0.0237609, 0.041329)
bones/146/rotation = Quaternion(-0.0157574, 0.143899, -0.579688, 0.801877)
bones/148/position = Vector3(-0.000295915, 0.0824022, 0.00347466)
bones/148/rotation = Quaternion(0.651198, 0.022708, 0.049658, 0.756941)
bones/149/rotation = Quaternion(0.413753, 0.00334351, -0.0356371, 0.909685)
bones/150/rotation = Quaternion(0.420604, -0.0121572, 0.0195825, 0.906952)
bones/152/position = Vector3(0.00110349, 0.0757071, 0.00450043)
bones/152/rotation = Quaternion(0.642206, 0.0364361, 0.132315, 0.754146)
bones/153/rotation = Quaternion(0.365935, -0.0376738, -0.0321699, 0.929321)
bones/154/rotation = Quaternion(0.385704, 0.0152328, 0.0280927, 0.922069)
bones/156/position = Vector3(0.00307062, 0.0668194, -0.00102625)
bones/156/rotation = Quaternion(0.62845, -0.0209155, 0.0762118, 0.773824)
bones/157/rotation = Quaternion(0.205367, -0.0320112, -0.0249894, 0.977842)
bones/158/rotation = Quaternion(0.152651, 0.0309711, 0.00963664, 0.987748)
bones/159/rotation = Quaternion(0.996899, 0.0434844, 0.00286167, -0.0655206)
bones/160/rotation = Quaternion(5.24085e-09, 2.48998e-08, -4.60205e-08, 1)
bones/161/rotation = Quaternion(0.996899, -0.0434844, -0.00286165, -0.0655206)
bones/162/rotation = Quaternion(-3.83946e-10, -2.51096e-08, 4.85816e-08, 1)
bones/165/rotation = Quaternion(0.996949, 0.0437426, 0.0028353, -0.0645848)
bones/166/position = Vector3(6.08266e-09, 0.245823, 5.00272e-08)
bones/166/rotation = Quaternion(7.3305e-08, -8.4316e-07, 1.7877e-08, 1)
bones/167/position = Vector3(2.26569e-08, 0.245824, 3.28362e-08)
bones/167/rotation = Quaternion(0.0531176, 0.00529869, -0.0117237, 0.998505)
bones/168/position = Vector3(5.30999e-08, 0.231631, 6.07238e-09)
bones/168/rotation = Quaternion(-6.11726e-08, 1.00431e-08, 3.69109e-08, 1)
bones/169/position = Vector3(1.17032e-08, 0.231631, 1.93872e-08)
bones/169/rotation = Quaternion(-0.539665, -0.039223, 0.0413491, 0.839948)
bones/170/position = Vector3(-9.26504e-09, 0.156054, -1.68594e-08)
bones/170/rotation = Quaternion(-0.0131879, 0.965858, -0.258721, -0.00275884)
bones/171/rotation = Quaternion(0.996949, -0.0437426, -0.0028353, -0.0645848)
bones/172/position = Vector3(-5.86437e-09, 0.245824, 6.67294e-08)
bones/172/rotation = Quaternion(6.45916e-08, 8.14478e-07, -2.27665e-08, 1)
bones/173/position = Vector3(-1.13953e-08, 0.245823, 3.75643e-08)
bones/173/rotation = Quaternion(0.0531176, -0.00529866, 0.0117237, 0.998505)
bones/174/position = Vector3(1.04774e-09, 0.231631, 2.84859e-09)
bones/174/rotation = Quaternion(-6.04273e-08, 5.01275e-09, -2.03945e-08, 1)
bones/175/position = Vector3(1.35008e-08, 0.23163, 4.49471e-09)
bones/175/rotation = Quaternion(-0.539665, 0.039223, -0.0413491, 0.839948)
bones/176/position = Vector3(-1.44022e-08, 0.156052, -2.6326e-08)
bones/176/rotation = Quaternion(0.0131879, 0.965858, -0.258721, 0.00275884)

[node name="racket" parent="h/test_04/game-rig/Skeleton3D" index="0"]
transform = Transform3D(-0.187012, -0.186965, 0.964401, -0.654032, 0.756208, 0.0197761, -0.732985, -0.627051, -0.263701, 0.0323695, 1.45357, 0.507537)

[node name="RacketForehand" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.89747, 1.21593, -0.0874602)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RacketForehand"]
shape = SubResource("50")

[node name="RacketBackhand" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.676815, 1.21593, -0.0874602)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RacketBackhand"]
shape = SubResource("50")

[node name="Points" type="Node3D" parent="."]

[node name="BallServePoint" type="Marker3D" parent="Points"]
transform = Transform3D(-0.785385, -0.618182, 0.0319754, 0.123958, -0.207672, -0.970312, 0.60647, -0.758102, 0.239734, 0.0693186, 2.72487, -0.612221)

[node name="BallTossPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.151763, 1.93189, -0.490733)

[node name="BackhandSliceDownPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.666439, 0.491877, -0.490733)

[node name="BackhandSliceUpPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.03961, 1.62896, -0.490733)

[node name="BackhandDownPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.666439, 0.68066, -0.490733)

[node name="BackhandUpPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.657659, 1.54555, -0.490733)

[node name="ForehandDownPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886059, 0.662953, -0.422848)

[node name="ForehandUpPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.908688, 1.91882, -0.422848)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.973773, 2.30926)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../h/test_04")
tree_root = SubResource("AnimationNodeStateMachine_dxleo")
anim_player = NodePath("../h/test_04/AnimationPlayer")
parameters/move/blend_position = Vector2(0.00304568, -0.0989012)
parameters/stroke/Transition/current_state = "forehand"
parameters/stroke/Transition/transition_request = ""
parameters/stroke/Transition/current_index = 0

[editable path="h/test_04"]
